yaml/nginx/ingress-nginx.yaml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  rules:
  - host: nefalem.ru
    http:
      paths:
      - backend:
          serviceName: service-nginx
          servicePort: 80
